--- a/lin.ini
+++ b/lin.ini
@@ -63,7 +63,7 @@ custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🔯 香港故
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 台湾故转`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 韩国故转`[]🔯 美国故转`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🏡 家宽节点`[]📺 流媒体节点`[]🐸 手动切换
 custom_proxy_group=🎞️ 国内媒体`select`[]DIRECT`[]🚀 节点选择`[]🐸 手动切换
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🐸 手动切换
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🐸 手动切换
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🏡 家宽节点`[]📺 流媒体节点`[]🐸 手动切换
 
 custom_proxy_group=🐸 手动切换`select`.*
 custom_proxy_group=🏡 家宽节点`select`(家宽|家庭|原生)
