--- a/lin.ini
+++ b/lin.ini
@@ -53,8 +53,8 @@ custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[]🔯 日本故转`
 custom_proxy_group=🪟 Microsoft`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 香港故转`[]🔯 台湾故转`[]🔯 加坡故转`[]🔯 韩国故转`[]🔯 美国故转`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇸🇬 加坡节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🏡 家宽节点`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 台湾故转`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 韩国故转`[]🔯 美国故转`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🏡 家宽节点`[]📺 流媒体节点`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 台湾故转`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 韩国故转`[]🔯 美国故转`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🏡 家宽节点`[]📺 流媒体节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]🚀 节点选择
-custom_proxy_group=♻️ Speedtest`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]🚀 节点选择
+custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]🚀 节点选择
+custom_proxy_group=♻️ Speedtest`select`[]DIRECT`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🐸 手动切换`[]🚀 节点选择
 custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 台湾故转`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 韩国故转`[]🔯 美国故转`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🏡 家宽节点`[]📺 流媒体节点`[]🐸 手动切换
 custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 台湾故转`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 韩国故转`[]🔯 美国故转`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🎥 奈飞节点`[]📺 流媒体节点`[]🐸 手动切换
 custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]🔯 香港故转`[]🔯 台湾故转`[]🔯 日本故转`[]🔯 加坡故转`[]🔯 韩国故转`[]🔯 美国故转`[]🇭🇰 香港节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🏡 家宽节点`[]🐸 手动切换
